# DataDrift

./: Cargo.toml  Readme.md
backend/: Cargo.toml
backend/src/: game_state.rs  incoming_networking.rs  main.rs
client/: Cargo.toml
client/src/: enemy.rs  main.rs  networking.rs  player.rs
client/src/game/: mod.rs
client/src/menu/: mod.rs
client/src/splash/: mod.rs
shared/: Cargo.toml
shared/src/models/: direction.rs  mod.rs  network_message.rs  player_states.rs
