[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies.shared]
path = "../shared"

[dependencies]
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
tokio = {version = "1.43.0", features = ["full"]}
async-tungstenite = {version = "0.28.2", features = ["async-std-runtime"]}
uuid = {version = "1.12.1", features = ["v4"]}
futures = "0.3.31"
async-std = "1.13.0"