[package]
name = "datadrift"
version = "0.1.0"
edition = "2021"

[dependencies.shared]
path = "../shared"

[dependencies]
bevy = "0.15.1"
async-tungstenite = {version = "0.28.2", features = ["async-std-runtime"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
async-std = "1.13.0"
futures = "0.3.31"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
